# todo_list

./: .gitignore  Cargo.toml  README.md  install.sh  todos.json
src/: cli.rs  input.rs  lib.rs  main.rs  menu.rs  notify.rs  priority.rs  recurrence.rs  sortby.rs  status.rs  storage.rs  task.rs  todo.rs  todo_cli.rs  utils.rs
tests/: integration_test.rs
