[package]
name = "todoscope"
version = "0.1.0"
edition = "2024"
description = "A simple CLI todo list manager"
license = "MIT"
repository = "https://github.com/leocm889/todoscope.git"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
uuid = { version = "1.17", features = ["serde", "v4"] }
colored = "3.0.0"
clap_complete = "4.5.57"
notify-rust = "4.11.0"

[[bin]]
name = "todo"
path = "src/main.rs"
